# Detection-Tool

./: README.md  pyproject.toml
archive/Indian Road Signs/: labels.csv
configs/: experiment.yaml
data/: labels.csv
scripts/: run_experiments.py
src/road_signs/: __init__.py  cnn.py  config.py  data.py  evaluation.py  label_map.py  main.py  modern_models.py  traditional_cv.py
